Update: use httpx and subfinder binary file
