# pkg/webapi/controllers/task.go
@@ -190,9 +190,11 @@ type XScanRequestParam struct {
 // @Param target 		formData string true "任务目标(ip、ip/掩码或域名），多个任务以,分开"
 // @Param port 			formData string false "ip目标扫描的端口"
 // @Param org_id 		formData int false "关联的组机构"
-// @Param fofa 			formData bool false "是否要执行fofa任务"
+// @Param onlineapi 	formData bool false "是否要执行fofa、quake、hunter等任务"
 // @Param xraypoc 		formData bool false "是否要执行xraypoc扫描"
 // @Param xraypocfile 	formData string false "xraypoc使用的pocfile，格式为\"poc类型|poc文件名\"；poc类型为default或custom，poc文件名可为空（全部poc）或xray支持的模糊匹配方式"
+// @Param nucleipoc 	formData bool false "是否要执行nuclei扫描"
+// @Param nucleipocfile formData string false "nucleipoc使用的pocfile"
 // @Param taskcron 		formData bool false "是否为计划任务"
 // @Param cronrule 		formData string false "计划任务的规则"
 // @Param croncomment 	formData string false "计划任务的名称"
