# swagger/swagger.yml
@@ -1668,8 +1668,8 @@ paths:
         type: integer
         format: int64
       - in: formData
-        name: fofa
-        description: 是否要执行fofa任务
+        name: onlineapi
+        description: 是否要执行fofa、quake、hunter等任务
         type: boolean
       - in: formData
         name: xraypoc
@@ -1678,6 +1678,14 @@ paths:
       - in: formData
         name: xraypocfile
         description: xraypoc使用的pocfile，格式为\poc类型|poc文件名\；poc类型为default或custom，poc文件名可为空（全部poc）或xray支持的模糊匹配方式
+        type: string
+      - in: formData
+        name: nucleipoc
+        description: 是否要执行nuclei扫描
+        type: boolean
+      - in: formData
+        name: nucleipocfile
+        description: nucleipoc使用的pocfile
         type: string
       - in: formData
         name: taskcron
